# processor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: options.cmake  packages.cmake
src/: assembler.cpp  assembler.hpp  disassembler.cpp  disassembler.hpp  immediate.hpp  instructions.hpp  main.cpp  processor.hpp  register.hpp  spec.hpp  types.hpp
test/: CMakeLists.txt  test_add.cpp  test_assembler.cpp  test_disassembler.cpp  test_ldi.cpp  test_ldm.cpp  test_ldr.cpp  test_stack.cpp  test_store.cpp
